--- a/phone_interface.html
+++ b/phone_interface.html
@@ -1952,9 +1952,7 @@ function applyChatPageBackground(chatNameOrJQueryObject, backgroundUrl) {
         } else {
             $page.css('background-image', 'none');
             // Revert to the default background color specified in CSS for .QQ_chat_page
-            $page.css('background-color', 'rgb(244,
-            245,
-            246)');
+            $page.css('background-color', 'rgb(244,245,246)');
         }
     }
 }
