--- a/phone_interface.html
+++ b/phone_interface.html
@@ -1,9 +1,7 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Document</title><style type="text/css">@import url(https: //static.zeoseven.com/zsft/59/main/result.css);
 .QQ_chat_page {
   padding-top: 10px;
-  background-color: rgb(244,
-    245,
-    246);
+  background-color: rgb(244,245,246);
   width: 100%;
   height: 100%;
   /* 填满视口高度 */
