--- a/phone_interface.html
+++ b/phone_interface.html
@@ -295,9 +295,7 @@
 }
 
         .discord-card:active {
-            background-color: rgb(244,
-    243,
-    243);
+            background-color: rgb(244,243,243);
 }
 
         .discord-card-tags{
